# backend/models/request.go
@@ -1,5 +1,7 @@
 package models
 
+import "time"
+
 type FormRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
@@ -24,6 +26,16 @@ type BodyProductRequest struct {
 }
 type ImageIDsRequest struct {
 	IDs []uint `json:"ids"`
+}
+
+type BodyPromotionRequest struct {
+	ProductID   uint      `json:"product_id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Discount    float64   `json:"discount"`
+	StartDate   time.Time `json:"start_date"`
+	EndDate     time.Time `json:"end_date"`
+	IsActive    bool      `json:"is_active"`
 }
 
 type BodyUpdateOrder struct {
